--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: SteamAPI
 Type: Package
-Title: What the Package Does (Title Case)
+Title: WRetrieve User Data and Information from Steam
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Zifei Chen
+        Tianmu Wang
+        Tyler Stevenson
+Maintainer: cyrilgolberg@gmail.com
+            tianmu02@student.ubc.ca
+            stev7198@gmail.com
+Description:An R package that interacts with the Steam API to retrieve user data such as friends, 
+owned games, achievements, and in-game statistics.
+License: MIT License
 Encoding: UTF-8
 LazyData: true
