--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: steamR
 Type: Package
 Title: Retrieve User Data and Information from Steam
 Version: 0.1.0
-Authors@R: c(person("xxx", role = c("aut", "cre"), email = "xxx@xxx.com"), person("yyy", role = "aut", email = "yyy@yyy.ca"), person("zzz", role = "ctb", email = "zzz@gmail.com"))
+Authors@R: c(person("Zifei Chen", role = c("aut", "cre"), email = "cyrilgolberg@gmail.com"), person("Tianmu Wang", role = "aut", email = "tianmu02@student.ubc.ca"), person("Tyler Stevenson", role = "aut", email = "stev7198@gmail.com"))
 Description: An R package that interacts with the Steam API to retrieve user data such as friends, owned games, achievements, and in-game statistics.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5.0)
 Imports: httr2, jsonlite
-Suggests: testthat
+Suggests: testthat, knitr, rmarkdown
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
