--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,18 @@ jobs:
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+
     - name: Install dependencies
       run: |
         Rscript -e "install.packages('httr2')"
         Rscript -e "install.packages('jsonlite')"
+
+        Rscript -e "install.packages('devtools')"
+        Rscript -e "devtools::install('.')"
 
     - name: Run the R API
       run: |
