--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,9 @@ jobs:
         Rscript -e "install.packages('httr2')"
         Rscript -e "install.packages('jsonlite')"
 
-    - name: Install devtools
+    name: Install the steamR package
       run: |
-        Rscript -e "install.packages('devtools', repos = 'https://cloud.r-project.org/')"
-
-    - name: Install local package
-      run: |
-        Rscript -e "devtools::install('.')"
-
-    - name: Run the R API
-      run: |
-        nohup Rscript R/steamR.R &
-        sleep 5
+        Rscript -e "install.packages('./', repos = NULL, type = 'source')"
 
     - name: Run tests
       run: |
