--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         Rscript -e "install.packages('httr2')"
         Rscript -e "install.packages('jsonlite')"
 
-    name: Install the steamR package
+    - name: Install the steamR package
       run: |
         Rscript -e "install.packages('./', repos = NULL, type = 'source')"
 
